--- a/app/src/main/res/layout/activity_comic_cover.xml
+++ b/app/src/main/res/layout/activity_comic_cover.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color"
-    tools:context=".view.activity.HqCoverActivity">
+    tools:context=".view.activity.ComicCoverActivity">
 
     <ImageView
         android:id="@+id/ivHqCoverCloseButton"
