--- a/app/src/main/res/layout/activity_comic_detail.xml
+++ b/app/src/main/res/layout/activity_comic_detail.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/background_color"
-    tools:context=".view.activity.HqDetailActivity">
+    tools:context=".view.activity.ComicDetailActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
