--- a/app/src/main/res/layout/activity_comic_cover.xml
+++ b/app/src/main/res/layout/activity_comic_cover.xml
@@ -8,11 +8,12 @@
     android:background="@color/background_color"
     tools:context=".view.activity.ComicCoverActivity">
 
-    <ImageView
-        android:id="@+id/ivHqCoverCloseButton"
+    <ImageButton
+        android:id="@+id/ibHqCoverCloseButton"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:src="@drawable/ic_baseline_close_24"
+        android:background="@color/background_color"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/ivHqCoverImage"
         app:layout_constraintStart_toStartOf="@id/ivHqCoverImage"/>
@@ -26,7 +27,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivHqCoverCloseButton"
+        app:layout_constraintTop_toBottomOf="@id/ibHqCoverCloseButton"
         android:scaleType="fitXY"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
