--- a/app/src/main/res/layout/activity_comic_detail.xml
+++ b/app/src/main/res/layout/activity_comic_detail.xml
@@ -14,7 +14,7 @@
 
         <ImageView
             android:id="@+id/ivHqDetailBackgroud"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="300dp"
             android:src="@drawable/marvel_background"
             android:scaleType="centerCrop"
@@ -22,7 +22,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivHqDetailCover"
             android:layout_width="150dp"
             android:layout_height="210dp"
