--- a/app/src/main/res/layout/activity_comic_detail.xml
+++ b/app/src/main/res/layout/activity_comic_detail.xml
@@ -22,6 +22,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
+        <ImageView
+            android:id="@+id/ibHqDetailbackButton"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:src="@drawable/ic_baseline_arrow_back_24"/>
+
+
+
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivHqDetailCover"
             android:layout_width="150dp"
