--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,6 @@
             app:layout_constraintBottom_toBottomOf="@id/linearLayoutLogin"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
-            android:padding="15dp"
             android:contentDescription="TODO" />
 
         <TextView
@@ -123,7 +122,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="20dp"
-                android:text="LOG IN" />
+                android:background="@color/box_authentication_color"
+                android:text="LOG IN"
+                android:textColor="@color/white"
+                android:padding="10dp"/>
 
             <Button
                 android:id="@+id/btLoginRegister"
@@ -132,7 +134,8 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp"
-                android:text="Create account"/>
+                android:text="Create account"
+                android:background="@color/white"/>
 
         </LinearLayout>
 
