--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -134,7 +134,9 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
-                android:text="SAVE" />
+                android:text="SAVE"
+                android:background="@color/box_authentication_color"
+                android:textColor="@color/white"/>
 
         </LinearLayout>
 
